tests/good/syntax/086-shebang.clap
#! /usr/bin/toto
val x = 42

