tests/bad/lexical/010-int-4.clap
val x = 0xCAFEBABE!

